--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ header1{display: flex; width:100%;}
 <div id="section4">Versión<br><h5>9.8(3)</h5>
 </div>
 <div id="linea"></div>
-<div id="section5">Tamaño<br><hcen7.30 MB</h5>
+<div id="section5">Tamaño<br><h5>17.30 MB</h5>
 </div>
 </section>
 </div>
